Print with dead subframes for pdf composition

Handle two cases with dead subframes for pdf composition:
-- When a web page has a dead subframe prior to printing, we need to
detect the liveness of the subframe, and avoid requesting printing for
such frame;
-- If after we request printing a subframe, the subframe dies, we add
monitoring for render frame's closed event to check whether it is one
of our pending ones. If so, notify pdf compositor service about that.

We add an interface in pdf compositor service to be notified about
the frame's unavailability for either of the above cases.

In this CL, we also add a map to record the subframes that are already
printed and use it to avoid printing the same ones repeatedly.

BUG=814086

Change-Id: Ibd69dd21a6498a5c2784dfe892bc5803e84fa6f0
Reviewed-on: https://chromium-review.googlesource.com/932018
Commit-Queue: Wei Li <weili@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539291}
Former-commit-id: d20c01231eb8acf9d38bc3aa37a108f2cee5f8d2